Fix:Footer list items centered- was on align left

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,13 +41,11 @@ body {
     width: 100%;
     height: 100vh;
     color: #f5f5f5;
-    /* background-color: rgb(1, 64, 64); */
     background: radial-gradient(rgb(1, 64, 64), #000);
 }
 
 /* Navbar  */
 .navbar {
-
     background-color: rgb(1, 64, 64);
     top: 0;
     z-index: 2;
@@ -55,7 +53,6 @@ body {
 }
 
 #logo {
-
     font-family: 'Kantumruy Pro', sans-serif;
     padding-left: 20px;
     font-weight: bold;
@@ -136,6 +133,7 @@ body {
 /* Jumbotron */
 .jumbotron {
     margin: 20px;
+    /* padding: 20px; */
     animation: zoom-in 3s forwards;
 }
 
@@ -265,7 +263,6 @@ footer {
 .contact-section,
 .sitemap-section {
     padding-top: 30px;
-    text-align: center;
 }
 
 .copyright-section {
@@ -376,7 +373,7 @@ iframe {
 }
 
 li {
-    text-align: left;
+    /* text-align: left; */
     margin: 1px;
 }
 
